# secops

./: .eslintignore  .eslintrc.js  .gitignore  CMakeLists.txt  DEV.md  LICENSE  Makefile  README.md  components.json  dummy_state.json  go.mod  go.sum  index.html  login.html  package-lock.json  package.json  pnpm-lock.yaml  stable.todo  tailwind.config.js  todo.md  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  test.yml
.husky/: commit-msg  pre-commit
assets/deb/: com.ubuntu.pkexec.secops.policy  secops.desktop
scripts/: secops.go  setup_host.sh
scripts/cmd/: cmd.go  root.go
scripts/cmd/version/: update.go  version.go
scripts/config/: configs.go
src/: App.tsx  login.html  main.tsx
src-tauri/: Cargo.toml  default_state.json  old.tauri.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: \  lib.rs  main.rs  startup.rs
src-tauri/src/commands/: dummy.rs  general.rs  kill.rs  mod.rs  shared.rs  systemctl.rs  updates.rs  usb.rs  user.rs
src-tauri/src/commands/system/: mod.rs  update.rs
src-tauri/src/core/: action.rs  app.rs  command.rs  instruction.rs  mod.rs  setup.rs
src-tauri/src/core/lib/: mod.rs  settings.rs
src-tauri/src/core/state/: mod.rs  revert.rs
src-tauri/src/ipc/: dummy.rs  general.rs  mod.rs  system.rs  systemctl.rs  user.rs
src-tauri/src/rspc/: error.rs  init.rs  mod.rs
src-tauri/src/users/: user.rs
src/components/: Firewall.tsx  Help.tsx  Home.tsx  InfoToolTip.tsx  SSH.tsx  Settings.tsx  SwitchCommand.tsx  TOR.tsx  user.tsx
src/components/Header/: Commit.tsx  Export.tsx  ExportCommit.tsx  Header.tsx  Import.tsx
src/components/Home/: AnimatePing.tsx  DistroBranding.tsx  General.tsx  Home.tsx  LoadingList.tsx  Services.tsx  UbuntuBranding.tsx  Update.tsx
src/components/Layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  (+1 more)
src/context/: Distro.tsx  rspc.tsx
src/lib/: icons.tsx  settings.ts  toastError.tsx
src/screens/: loading.html
src/styles/: global.css
src/ts/: bindings.d.ts
(+12 files in other folders)
