[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = '1.4'

[dependencies]
open = '5.0.0'
serde_json = '1.0'

[dependencies.rspc]
features = ['tauri']
version = '0.1.3'

[dependencies.serde]
features = ['derive']
version = '1.0'

[dependencies.tauri]
features = ['shell-open']
version = '1.4'

[dependencies.tokio]
features = ['full']
version = '1.32.0'

[features]
custom-protocol = ['tauri/custom-protocol']

[package]
authors = ['Kunal Singh <kunal@kunalsin9h.com>']
description = 'An Ubuntu Desktop Application for managing OS security.'
edition = '2021'
license = 'MIT'
name = 'secops'
repository = 'https://github.com/kunalsin9h/secops'
version = '0.1.6'

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
panic = 'abort'
strip = true
