[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = '1.4'

[dependencies]
chrono = '0.4.31'
env_logger = '0.10.0'
log = '0.4.20'
serde_json = '1.0'

[dependencies.rspc]
features = ['tauri']
version = '0.1.3'

[dependencies.serde]
features = ['derive']
version = '1.0'

[dependencies.tauri]
features = ['dialog-open', 'fs-copy-file', 'dialog-save', 'shell-open', 'fs-write-file', 'fs-read-dir', 'fs-read-file']
version = '1.4'

[dependencies.tokio]
features = ['full']
version = '1.32.0'

[features]
custom-protocol = ['tauri/custom-protocol']

[package]
authors = ['Kunal Singh <kunal@kunalsin9h.com>']
description = 'An Ubuntu Desktop Application for managing OS security.'
edition = '2021'
license = 'MIT'
name = 'secops'
repository = 'https://github.com/kunalsin9h/secops'
version = '0.13.1'

[profile]
[profile.ci]
inherits = 'dev'

[profile.ci.package]
[profile.ci.package.'*']
opt-level = 0

[profile.dev]
[profile.dev.package]
[profile.dev.package.'*']
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
panic = 'abort'
strip = true
